multiple schedules works!

--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "react": "^15.6.1",
     "react-autosuggest": "^9.3.2",
     "react-big-calendar": "^0.14.4",
+    "react-bootstrap": "^0.32.1",
     "react-collapse": "^4.0.3",
     "react-dom": "^15.6.1",
     "react-motion": "^0.5.0",
@@ -30,7 +31,5 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0"
   },
-
   "homepage": "/schedule-builder/front/build"
-
 }
