--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "react-motion": "^0.5.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.10",
+    "react-select": "^1.2.1",
     "react-tooltip": "^3.3.0",
     "redux": "^3.7.2"
   },
